2008-10-10  Philip Withnall  <philip@tecnocode.co.uk>

	* data/almanah.ui:
	* src/Makefile.am:
	* src/add-link-dialog.c (almanah_add_link_dialog_class_init),
	(almanah_add_link_dialog_init), (almanah_add_link_dialog_dispose),
	(almanah_add_link_dialog_new), (destroy_extra_widgets),
	(ald_response_cb), (ald_type_combo_box_changed_cb), (ald_show_cb),
	(almanah_add_link_dialog_get_link):
	* src/add-link-dialog.h:
	* src/entry.c (almanah_entry_class_init), (almanah_entry_init),
	(almanah_entry_finalize), (almanah_entry_get_property),
	(almanah_entry_set_property), (almanah_entry_new),
	(almanah_entry_set_content), (almanah_entry_get_content),
	(almanah_entry_get_date), (almanah_entry_get_editability),
	(almanah_entry_is_empty):
	* src/entry.h:
	* src/interface.c (diary_get_interface_filename),
	(diary_create_interface), (diary_interface_error),
	(diary_calendar_month_changed_cb):
	* src/interface.h:
	* src/link.c (almanah_link_class_init), (almanah_link_init),
	(almanah_link_finalize), (almanah_link_get_property),
	(almanah_link_set_property), (almanah_link_new),
	(almanah_link_format_value), (almanah_link_view),
	(almanah_link_build_dialog), (almanah_link_get_values),
	(almanah_link_populate_model), (almanah_link_get_type_id),
	(almanah_link_get_name), (almanah_link_get_description),
	(almanah_link_get_icon_name), (almanah_link_get_value),
	(almanah_link_set_value), (almanah_link_get_value2),
	(almanah_link_set_value2):
	* src/link.h:
	* src/links/file.c (almanah_file_link_class_init),
	(almanah_file_link_init), (file_format_value), (file_view),
	(file_build_dialog), (file_get_values):
	* src/links/file.h:
	* src/links/note.c (almanah_note_link_class_init),
	(almanah_note_link_init), (note_format_value), (note_view),
	(note_build_dialog), (note_get_values):
	* src/links/note.h:
	* src/links/uri.c (almanah_uri_link_class_init),
	(almanah_uri_link_init), (uri_format_value), (uri_view),
	(uri_build_dialog), (uri_get_values):
	* src/links/uri.h: